resources/style.css
body {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 14px;
    line-height: 1.5em;

    background-color: #1e2022;
    color: #ccc;
    margin: 0 0;
}

img {
    max-height: 100%;
    max-width: 100%;
    object-fit: contain;
}

a { color: #6e7aac; text-decoration: none; }
a:visited { color: #6e7aac; text-decoration: none; }
a:hover { color: #6e7aac; text-decoration: underline; }

.wrapper {
    max-width: min(95%, 1600px);
    margin-left: auto;
    margin-right: auto;
}

@media only screen and (max-width: 600px) {
    .wrapper {
        max-width: 98%;
    }
}

.page-title {
    user-select: none;
    text-align: center;
    font-size: 2em;
}

.greeter {
    user-select: none;
    margin-bottom: 3em;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.greeter-element {
    user-select: none;
    margin-right: 1em;
}

/*
Styling for threads
*/

.thread-parent {
    padding: 0.5em 1em;
    margin-bottom: 5em;
    background-color: #151618;
}

@media only screen and (max-width: 600px) {
    .thread-parent {
        padding: 0.2em 0.5em;
    }
}

.thread-parent > .post-parent-r > .post-parent {
    background-color: #151618;
}

.thread-parent > .post-parent-r {
    margin-left: -1em;
    border-left: none;
}

@media only screen and (max-width: 600px) {
    .thread-parent > .post-parent-r {
        margin-left: -0.4em;
    }
}

.thread-parent > .post-parent-r > .post-parent > .post-succ {
    display: none;
}

.thread-parent > .post-parent-r > .post-parent > .post-details > .post-collapsible-anchor {
    display: none;
}

.thread-details {
    margin-bottom: 0.5em;
}

.thread,
.thread > a,
.thread > a:hover,
.thread > a:visited
{
    user-select: none;
    color: #555;
    float: right;
}

.thread-sub {
    user-select: none;
    font-size: 1.1em;
    font-weight: bold;
    color: #fff;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

.thread-time {
    user-select: none;
    display: inline-flex;
    color: #555;
    margin-bottom: 0.2em;
    margin-right: 0.5em;
    position: absolute;
    bottom: 0;
    right: 0;
}

.thread-description {
    display: none;
}

.thread-thumbnail {
    user-select: none;
    height: 100px;
    max-width: 600px;
}

.thread-replies {
    user-select: none;
    display: inline-flex;
    color: #9ee7e0;
}

/*
Styling for posts
*/

.post-parent-r {
    border-left: 1px solid #282a2e;
    margin-left: 1em;
}

@media only screen and (max-width: 600px) {
    .post-parent-r {
        margin-left: 0.4em;
    }
}

.post-parent-r > .no-embed { margin-left: 0em; }

.post-parent {
    background: #282a2e;
    padding: 0.5em 1em;
    margin-bottom: 0.5em;
}

.post-details {
    user-select: none;
    margin-bottom: 0.25em;
}

.post-complexity {
    display: inline-flex;
    margin-right: 0.5em;
    color: #c676eb;
    max-width: calc(100% - 15em);
    overflow: hidden;
}

.post-complexity-number {
    display: inline-flex;
    margin-right: 0.5em;
    color: #555;
}

.post-time {
    user-select: none;
    display: inline-flex;
    margin-right: 0.5em;
    color: #555;
}

.post-name {
    user-select: none;
    color: #559c90;
}

.post-sub {
    font-size: 1.1em;
    font-weight: bold;
    color: #fff;
    margin-bottom: 1em;
}

.post-file {
    word-break: break-all;
}

.post-country-name {
    float: right;
    color: #555;
}

.post-succ,
.post-succ > a {
    user-select: none;
    margin-top: 0.5em;
    font-size: 0.9em;
    color: #555;
}

.post-no,
.post-no > a {
    float: right;
    color: #555;
}

.post {
    white-space: pre-line;
    word-break: break-all;
}

.green-text {
    display: inline;
    color: #b5bd68;
}

.reply-text,
.reply-text:visited,
.reply-text:hover
{
    display: inline;
    color: #6e7aac;
}

/*
Styling for collapsible 
*/

.collapsed {
    min-height: 1.5em;
    max-height: 1.5em;
    overflow: hidden;
    background-color: #202022;
}

.collapsed-parent > .post-parent-r {
    display: none;
}

.collapsed-thread-parent {
    padding: 0.6em 1em;
    display: inline-block;
    vertical-align: top;
    height: 260px;
    width: 180px;
    margin-right: 1em;
    margin-bottom: 2em;
    line-height: 1.3em;
    overflow: hidden;
    position: relative;
}

.collapsed-thread-parent > .thread-description {
    display: block;
}

.collapsed-thread-parent > .post-parent-r {
    display: none;
}

.post-collapsible-anchor,
.thread-collapsible-anchor
{
    user-select: none;
    display: inline-flex;
    margin-right: 0.5em;
    font-size: 1.2em;
}

.post-collapsible-anchor > a,
.thread-collapsible-anchor > a
{
    color: #555;
}

.post-collapsible-anchor:hover,
.thread-collapsible-anchor:hover
{
    cursor: pointer;
}

